--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/cdk": "11.2.2",
+    "@angular/animations": "^11.2.3",
+    "@angular/cdk": "^11.2.2",
     "@angular/common": "^11.2.3",
     "@angular/compiler": "^11.2.3",
     "@angular/core": "^11.2.3",
     "@angular/forms": "^11.2.3",
+    "@angular/material": "^11.2.2",
     "@angular/platform-browser": "^11.2.3",
     "@angular/platform-browser-dynamic": "^11.2.3",
     "@angular/router": "^11.2.3",
     "angular": "^1.8.2",
     "rxjs": "^6.6.6",
     "tslib": "^2.1.0",
-    "zone.js": "^0.11.4",
-    "@angular/material": "2.0.0-beta.11",
-    "@angular/animations": "4.3.6"
+    "zone.js": "^0.11.4"
   },
   "scripts": {
     "ng": "ng",
